--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,11 +14,16 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
+    "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
+    "dev": "concurrently \"npm run start-react\" \"wait-on http://localhost:3000 && npm run start-electron\" ",
+    "postintall": "electron-builder install-app-deps",
+    "pack-app": "npm build-react && electron-builder --dir",
+    "pack-build": "electron-builder --dir",
+    "build": "npm build-react && electron-builder",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
     "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
@@ -41,7 +47,9 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "electron": "^16.0.7",
+    "electron-builder": "^22.14.5",
     "electron-is-dev": "^2.0.0",
+    "nodemon": "^2.0.15",
     "wait-on": "^6.0.0"
   }
 }
