--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sqlite3": "^5.0.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -18,10 +19,10 @@
     "build-react": "react-scripts build",
     "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
     "dev": "concurrently \"npm run start-react\" \"wait-on http://localhost:3000 && npm run start-electron\" ",
-    "postintall": "electron-builder install-app-deps",
-    "pack-app": "npm build-react && electron-builder --dir",
+    "postinstall": "electron-builder install-app-deps",
+    "pack-app": "npm run build-react && electron-builder --dir",
     "pack-build": "electron-builder --dir",
-    "build": "npm build-react && electron-builder",
+    "build": "npm run build-react && electron-builder",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "wait-on tcp:3000 && electron ."
@@ -51,5 +52,35 @@
     "electron-is-dev": "^2.0.0",
     "nodemon": "^2.0.15",
     "wait-on": "^6.0.0"
+  },
+  "build": {
+    "appId": "com.jblcc.tithes",
+    "productName": "Tithes App",
+    "copyright": "test",
+    "files": [
+      "build/**/*"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "extraResources": [
+      {
+        "from": ".build/assets/randomfile.png",
+        "to": ".assets/randomfile.png"
+      },
+      {
+        "from": "./db/database.js",
+        "to": "db/database.js",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "win": {
+      "icon": "./build/images/appicon.ico",
+      "target": [
+        "zip"
+      ]
+    }
   }
 }
