--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "moment": "^2.29.1",
     "next": "^12.0.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
+    "react-calendar": "^3.6.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.24.1",
     "react-moment": "^1.1.1",
     "reset-scss": "^1.0.0",
     "sass": "^1.48.0",
