--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^7.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-next": "^3.1.5",
+    "electron-store": "^8.0.1",
     "nodemon": "^2.0.15",
     "react-bootstrap": "^2.1.1",
     "react-calendar": "^3.6.0",
