--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-vis": "^1.11.7",
     "reset-scss": "^1.0.0",
+    "rxjs": "^7.5.2",
     "sass": "^1.49.0",
     "sqlite3": "^5.0.2",
     "wait-on": "^6.0.0"
@@ -33,7 +34,7 @@
     "dist": "npm run build && electron-builder"
   },
   "devDependencies": {
-    "electron": "^12.0.2",
+    "electron": "~12.2.3",
     "electron-builder": "^22.10.5",
     "next": "latest",
     "react": "^17.0.2",
